new version mandelbrot with basic cretion of brot on the S3 server. Works wellgit status!

--- a/templates/mandelapp/index.html
+++ b/templates/mandelapp/index.html
@@ -52,9 +52,7 @@
 					<input type="submit" class="btn btn-success" value="Mandelbrot"/>
 				</form>
 				{% if outputcode == 1 %}
-					{{ settings.DATABASES.NAME }}
-					{% load static %}
-					<img class="col-lg-4" src="{% static 'brot.png' %}" alt="Mon image" />
+					<img src="{{ path }}"/>
 				{% endif %}
 			</div>
 		</div>
