Title in the header would be changed (Mendelbrot -> Mandelbrot)

--- a/templates/mandelapp/index.html
+++ b/templates/mandelapp/index.html
@@ -22,7 +22,7 @@
 	</head>
 	<body>
 	<div class="jumbotron">
-		<h1 class="text-center">Erstellen eines Mendelbrotes</h1>
+		<h1 class="text-center">Erstellen eines Mandelbrotes</h1>
 	</div>
 		<div class="container-fluid">
 			<div class="row">
